Using elixir within a erlang code.
elixir deps is added through rebar and a elixir io function is called from within a erlang source

--- a/rebar.config
+++ b/rebar.config
@@ -1,1 +1,10 @@
 {erl_opts, [debug_info]}.
+
+{deps, [{ elixir, "0.8.*",
+		    {git, "git://github.com/elixir-lang/elixir", "stable"}}]}.
+
+{lib_dirs, [
+  "deps/elixir/lib/elixir/ebin",
+  "deps/elixir/lib/ex_unit/ebin",
+  "deps/elixir/lib"
+]}.
