--- a/erlang_riak_core/rebar.config
+++ b/erlang_riak_core/rebar.config
@@ -1,4 +1,4 @@
-{sub_dirs, ["rel", "apps/rcore"]}.
+{sub_dirs, ["apps/rcore", "rel"]}.
 {cover_enabled, true}.
 {erl_opts, [debug_info, fail_on_warning]}.
 {deps, [{riak_core, "1.3.0",
