--- a/erlang_riak_core/rel/reltool.config
+++ b/erlang_riak_core/rel/reltool.config
@@ -1,8 +1,6 @@
 {sys, [
-       {lib_dirs, ["../apps", "../deps"]},
-       {erts, [{mod_cond, derived}, {app_file, strip}]},
-       {app_file, strip},
-       {rel, "mynode", "1",
+       {lib_dirs, ["../apps/", "../deps/"]},
+       {rel, "rcore", "1",
         [
          kernel,
          stdlib,
@@ -14,7 +12,7 @@
          kernel,
          stdlib
         ]},
-       {boot_rel, "mynode"},
+       {boot_rel, "rcore"},
        {profile, embedded},
        {incl_cond, include},
        {excl_archive_filters, [".*"]}, %% Do not archive built libs
@@ -27,14 +25,14 @@
        {app, rcore, [{incl_cond, include}]}
       ]}.
 
-{target_dir, "mynode"}.
+{target_dir, "rcore"}.
 
 {overlay, [
            {mkdir, "log/sasl"},
            {copy, "files/erl", "\{\{erts_vsn\}\}/bin/erl"},
            {copy, "files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
-           {copy, "files/mynode", "bin/mynode"},
-           {copy, "files/mynode.cmd", "bin/mynode.cmd"},
+           {copy, "files/rcore", "bin/rcore"},
+           {copy, "files/rcore.cmd", "bin/rcore.cmd"},
            {copy, "files/start_erl.cmd", "bin/start_erl.cmd"},
            {copy, "files/install_upgrade.escript", "bin/install_upgrade.escript"},
            {copy, "files/sys.config", "releases/\{\{rel_vsn\}\}/sys.config"},
